Remove use of File::Slurp and update the dzil build.
File::Slurp can mess up some line endings when Perl layers are involved.
So, we remove the use of File::Slurp in favor of Path::Tiny and its
slurp_utf8 function. This results in a Do What I Mean solution that
shouldn't leave any unsuspected behavior.

One section that read the DATA handle using File::Slurp was changed into
the more traditional { local $/; <DATA> } type of slurping method.
However, since the need is there to read the DATA handle more than once,
we need to put the cursor back where we found it each time. This whole
process is wrapped in a try/catch block. We left the conversion of the
DATA handle to a globref in place for the time being.

We got rid of the PodWeaver stuff in favor of just writing out the
documentation by hand as it was only being used lightly anyway. During
this time, we fixed some POD errors as well as some spelling mistakes.

Updated the DZil build to be a bit more modern using the ::Starter
bundle.

Also, worked up a .mailmap to ensure all of the previous author's work
would be attributed correctly and show up with the right CPAN account
linked in metacpan.

--- a/dist.ini
+++ b/dist.ini
@@ -2,28 +2,77 @@ name = CPAN-Index-API
 author = Peter Shangov <pshangov@yahoo.com>
 license = Perl_5
 copyright_holder = Venda, Inc.
-version = 0.007
-abstract = Read and write CPAN index files
+; version = 0.008
+; abstract = Read and write CPAN index files
 
-[GatherDir]
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[License]
-[ExtraTests]
-[ExecDir]
-[ShareDir]
-[MakeMaker]
-[Manifest]
-[TestRelease]
-[ConfirmRelease]
-[UploadToCPAN]
-[PodSyntaxTests]
-[AutoPrereqs]
-[PkgVersion]
-[Test::Compile]
-[Bugtracker]
-[ReadmeFromPod]
-[PodWeaver]
-[EOLTests]
-[NoTabsTests]
+[Git::GatherDir]
+exclude_filename = Makefile.PL
+exclude_filename = META.json
+exclude_filename = README.md
+exclude_filename = LICENSE
+exclude_filename = t/00-report-prereqs.t
+
+[@Starter]
+-remove = GatherDir
+revision = 3
+managed_versions = 1
+installer = MakeMaker::Awesome
+RewriteVersion.global = 1
+NextRelease.format = %-9v %{yyyy-MM-dd}d
+
+[ReadmeAnyFromPod / Markdown_Readme]
+type = gfm
+source_filename = lib/CPAN/Index/API.pm
+filename = README.md
+location = root
+
+[Prereqs::FromCPANfile]
+
+[Git::Contributors]
+[GithubMeta]
+issues  = 1
+user    = genio
+[@Git]
+
+[CheckChangeLog]
+[CheckChangesHasContent]
+[Test::ChangesHasContent]
+
+[Test::Kwalitee]
+skiptest = no_symlinks
+[Test::Version]
+[Test::Pod::Coverage::Configurable]
+
+[Test::PodSpelling]
+wordlist = Pod::Wordlist
+spell_cmd = aspell list
+stopword = CPAN
+stopword = github
+stopword = stopwords
+stopword = wordlist
+stopword = authorid
+stopword = chapterid
+stopword = cpanid
+stopword = ino
+stopword = GPL
+stopword = LGPL
+stopword = IPC
+stopword = Param
+stopword = Pixmaps
+stopword = Proc
+
+[CopyFilesFromBuild]
+copy = lib/CPAN/Index/API.pm
+copy = lib/CPAN/Index/API/File/MailRc.pm
+copy = lib/CPAN/Index/API/File/ModList.pm
+copy = lib/CPAN/Index/API/File/PackagesDetails.pm
+copy = lib/CPAN/Index/API/File/Whois.pm
+copy = lib/CPAN/Index/API/Role/Clonable.pm
+copy = lib/CPAN/Index/API/Role/HavingFilename.pm
+copy = lib/CPAN/Index/API/Role/HavingGeneratedBy.pm
+copy = lib/CPAN/Index/API/Role/Readable.pm
+copy = lib/CPAN/Index/API/Role/Writable.pm
+copy = Makefile.PL
+copy = META.json
+copy = LICENSE
+copy = t/00-report-prereqs.t
