--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
-*.swp
+Build
+/MANIFEST.SKIP.bak
+/MANIFEST.bak
+META.YML
+MYMETA*
+Makefile
+Makefile.old
+SSL
+blib
+blib/
+.alien/
+_alien/
+.build/
+_build/
+cover_db/
+/_eumm/
+/CPAN-Index-API*
+CPAN-Index-API*/
+CPAN-Index-API*.tar.gz
+.perl-version
+pm_to_blib
+*.sw*
+*.tar.gz
+xx*
+*.bs
+*.o
